@@ -1,4 +1,7 @@
 Version 1.5.5+svn:
+ * Editor2
+   * Changed the base-terrain key modifier to shift from alt.
+     This fixes an issue with some window managers grabbing the event.
  * Language and i18n:
    * updated translations: Galician, German
  * Units:
